--- a/app/src/main/res/layout/activity_distance.xml
+++ b/app/src/main/res/layout/activity_distance.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/conversionColor">
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +39,7 @@
         android:layout_marginBottom="15dp">
     </Spinner>
     <Button
-        android:id="@+id/bConvert"
+        android:id="@+id/bConvertDistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/convert"
